--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get:
+  firebase_auth: ^3.11.0
+  firebase_core: ^1.24.0
 
 dev_dependencies:
   flutter_test:
